--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="https://user-images.githubusercontent.com/40875400/114254904-b5929900-99a1-11eb-8768-285ddaf9682b.png" />
 
     <h1># Why Barcodor?</h1>
-    Barcodor helps to easily generate Barcodes on the disered derectory.
+    Barcodor helps to easily generate Barcodes on the desired directory.
 
     <h1># Usefullness?</h1>
     Have you ever generated billions of unique barcodes just by giving that magic number & the directory of destination?
