--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         a {
             color: yellow;
         }
+        
+        .img1 {
+            width: auto;
+        }
     </style>
     <h1># Barcodor</h1>
 
@@ -27,7 +31,7 @@
     a simple Barcode Generator 😁
     <h3>By <a target="_blank" href="https://github.com/MedouneSGB">MSGB</a></h3>
 
-    <img src="https://user-images.githubusercontent.com/40875400/114424513-b85edb00-9ba7-11eb-8107-e5b18f762b4d.png" />
+    <img class="img1" src="https://user-images.githubusercontent.com/40875400/114424513-b85edb00-9ba7-11eb-8107-e5b18f762b4d.png" />
     </br>
     <img src="https://user-images.githubusercontent.com/40875400/114254454-f210c580-999e-11eb-8e8c-66b685dfd077.png" />
     <img src="https://user-images.githubusercontent.com/40875400/114254826-59c81000-99a1-11eb-803e-4acdb5330eb0.png" />
