--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         
         .img1 {
-            width: auto;
+            width: 35%;
         }
     </style>
     <h1># Barcodor</h1>
