Define Barcode img on mobile

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             color: yellow;
         }
         
-        .img1 {
-            width: 35%;
+        @media only screen and (max-width: 380px) {
+            .img1 {
+                width: 350px;
+            }
         }
     </style>
     <h1># Barcodor</h1>
