--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             text-align: center;
             background-color: blueviolet;
             color: white;
+            overflow-wrap: break-word;
         }
         
         a {
